<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/trainNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/train"
            android:layout_marginStart="10dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/departureTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_departure_time"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:paddingStart="10dp"/>

                <TextView
                    android:id="@+id/departureDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_departure_date"
                    android:textColor="@android:color/black"
                    android:gravity="start"
                    android:paddingStart="10dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/arrivalTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_departure_time"
                    android:textSize="22sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:textStyle="bold"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/arrivalDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_departure_date"
                    android:textColor="@android:color/black"
                    android:layout_gravity="end"
                    android:paddingEnd="10dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="20dp"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coupe"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/coupeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reserved_seat"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/reservedSeatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chooseTrainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_train"
            android:background="@color/purple_500"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>