<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/carNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/car_number"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/coupeOrReservedSeatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/coupe"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>


                <RadioGroup
                    android:id="@+id/placesRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coupe"
                    android:textColor="@color/black"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    >
                </RadioGroup>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chooseCarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_ticket"
            android:background="@color/purple_500"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>